Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,19 +1,9 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
-  "site_keywords": [
-    {
-      "keyword": "Next.js"
-    },
-    {
-      "keyword": "Netlify"
-    },
-    {
-      "keyword": "React"
-    }
-  ],
+  "base_url": "https://amandogra.netlify.app",
+  "site_title": "Aman Dogra",
+  "site_description": "A piece of my head",
+  "site_keywords": [],
   "posts_per_page": 5,
-  "twitter_account": "@my-account",
-  "github_account": "wutali"
+  "twitter_account": "@amandogra",
+  "github_account": "amandogra"
 }
